Fixed whitespace at bottom

--- a/css/style.scss
+++ b/css/style.scss
@@ -17,10 +17,10 @@ html, body{
 	font-family: $default-font;
 }
 
-.roadblasters{
-	position: absolute;
-	bottom: 0;
-    left: 0;
+body{
+	width: 100%;
+    height: 100%;
+    position: fixed;
 }
 
 h1{
@@ -45,7 +45,7 @@ a:hover{
 .overlay{
     position: absolute;
     top: 0;
-    background-color: rgba(255,255,255,0.4);
+    background-color: rgba(255,255,255,0.5);
     width: 100%;
     height: 100%;
     z-index: 99998;
